# pydsjson

./: LICENSE  README.md  setup.cfg
src/pydsjson/: cli.py  dsjson.py
