[metadata]
name = pydsjson
version = 0.1.0
description = Tools for working with Dataset-JSON
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/satish-ghadigaonkar/pydsjson
author = Satish Ghadigaonkar
author_email = satishcool21@yahoo.co.in
license = MIT
license_files = LICENSE
platforms = any
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source Code = https://github.com/satish-ghadigaonkar/pydsjson

[options]
packages = find:
install_requires =
    click~=8.1.3
    pandas~=1.3.5
    numpy~=1.23.4
    xport~=3.6.1
    lxml~=4.9.1
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    dsjson = pydsjson.cli:dataset_json